<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.daron.tictactoe.PlayActivity"
    tools:ignore="ContentDescription">

    <!--Use for displaying name-->
    <TextView
        android:id="@+id/welcomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/turn"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:paddingTop="16dp">

        <ImageButton
            android:id="@+id/button0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_row="0"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="1"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="1"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_row="1"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:onClick="makeMove"
            android:scaleType="centerInside"
            android:tag="empty" />
    </GridLayout>


    <TextView
        android:id="@+id/gameState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/gameState"
        android:textSize="15sp" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="restartGame"
        android:text="@string/restartGame"
        android:textSize="15sp" />


</LinearLayout>
